# BestemmiometroScherzosoBot

./: Cargo.toml  README.md  allowlist.json  credits_budget.json  whitelist.json
src/: main.rs
src/openai_client/: http_requests_structs.rs  mod.rs
src/openai_turbo/: mod.rs  serde_structs.rs
